--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              <h3>Brand New <span>"Muscle Car"</span></h3>
              <p>Building Yesterday's Dream Comes To </p>
              <button>GET STARTED</button>
-             <button>TAKE A RIDE</button>
+             <button>TAKE A RIDE CAR</button>
          </div>
          <div class="image">
             <!-- <img src="./car.jpg.mp4" alt="car"> -->
